fixed jumpy hover animation

--- a/src/index.css
+++ b/src/index.css
@@ -366,7 +366,7 @@ button {
 .home .projects {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   gap: 0.75em;
   flex-direction: row;
   width: fit-content;
